# agent-as-mcp

./: .gitignore  README.md  pyproject.toml
raven_skills/: __init__.py  __main__.py  agent.py  dialogue_agent.py  integrations.py  mcp_server.py
raven_skills/core/: __init__.py  embeddings.py  llm.py
raven_skills/interfaces/: __init__.py  storage.py
raven_skills/models/: __init__.py  dialogue.py  result.py  skill.py  task.py
raven_skills/prompts/: __init__.py  schemas.py  templates.py
raven_skills/storage/: __init__.py  json_storage.py
raven_skills/utils/: __init__.py  similarity.py
scripts/: business_tests.py  test_dialogue_agent.py  test_feedback.py  test_feedback_debug.py  test_hyde_multivector.py  test_langchain_integration.py  test_local_llm.py  test_mcp_server.py  test_multi_scenario.py  test_organic_conversation.py  test_real_api.py  test_weather_scenario.py
tests/: conftest.py  test_core.py  test_executor.py  test_matcher.py  test_models.py  test_similarity.py
